ka1/kube1/services/openwebui/openwebui-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: openwebui
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: 8080
  selector:
    app: openwebui
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: openwebui
spec:
  replicas: 1
  selector:
    matchLabels:
      app: openwebui
  template:
    metadata:
      labels:
        app: openwebui
    spec:
      hostname: openwebui
      containers:
        - name: openwebui
          image: ghcr.io/open-webui/open-webui:v0.11.4
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: openwebui-data
              mountPath: /app/backend/data
          imagePullPolicy: Always
      volumes:
        - name: openwebui-data
          persistentVolumeClaim:
            claimName: openwebui-data-pvc
