ka1/kube1/services/openwebui/openwebui-ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: openwebui-https-gateway
  annotations:
    cert-manager.io/cluster-issuer: "clusterissuer-cloudflare-acme-prod"
spec:
  gatewayClassName: cilium
  listeners:
    - name: https
      protocol: HTTPS
      port: 443
      hostname: "openwebui.ka1.brodatzki.net"
      tls:
        mode: Terminate
        certificateRefs:
        - kind: Secret
          name: openwebui-gateway-tls
      allowedRoutes:
        namespaces:
          from: Same
    - name: http
      protocol: HTTP
      port: 80
      hostname: "openwebui.ka1.brodatzki.net"
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: openwebui-http-to-https-redirect
spec:
  parentRefs:
    - name: openwebui-https-gateway
      sectionName: http
  hostnames:
    - "openwebui.ka1.brodatzki.net"
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
